--- a/orm/views/register.hbs
+++ b/orm/views/register.hbs
@@ -6,7 +6,7 @@
 </div>
 {{/if}}
 <form method="POST" style="max-width: 300px; margin: auto; margin-top: 50px; border: 0.5px solid gray; padding: 30px 30px 30px 30px">
-  <h3>Login</h3>
+  <h3>Register</h3>
   <div class="form-group">
     <label>Username</label>
     <input type="text" name="username" class="form-control">
@@ -16,7 +16,11 @@
     <input type="password" name="password" class="form-control">
   </div>
   <div class="form-group">
-    <button class="btn btn-success">Login</button>
-    <a class="btn btn-primary" href="/register">Register</a>
+    <label>Repeat password</label>
+    <input type="password" name="password2" class="form-control">
+  </div>
+  <div class="form-group">
+    <button class="btn btn-success">Register</button>
+    <a class="btn btn-primary" href="/login">Login</a>
   </div>
 </form>
