--- a/orm/views/editPost.hbs
+++ b/orm/views/editPost.hbs
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-group">
-      <textarea class="form-control" name="post">{{post.body}}</textarea>
+      <textarea class="form-control" name="message">{{post.message}}</textarea>
     </div>
 
     <div class="form-group">
