--- a/orm/views/index.hbs
+++ b/orm/views/index.hbs
@@ -11,7 +11,7 @@ Logged in as {{user.username}} | <a href="/logout">Logout</a>
         <strong>Posted: </strong> {{formatDate createdAt}}
       </div>
     </div>
-    <pre>{{body}}</pre>
+    <pre>{{message}}</pre>
 
     <div class="footer">
       <a href="/posts/{{id}}" class="btn btn-primary">Edit</a>
@@ -28,7 +28,7 @@ Logged in as {{user.username}} | <a href="/logout">Logout</a>
 <form action="/posts" method="POST">
   <h2>Create new post</h2>
   <div class="form-group">
-    <textarea class="form-control" name="post" placeholder="Write a new guestbook post"></textarea>
+    <textarea class="form-control" name="message" placeholder="Write a new guestbook post"></textarea>
   </div>
   <div class="form-group">
     <button type="submit" class="btn btn-success">Post</button>
